estate/platform/graded/tests/cage-netpol/resources.yaml
# A caged pod (the mutate already stamped posture.acme.io/caged) and a healthy pod.
apiVersion: v1
kind: Pod
metadata:
  name: caged
  namespace: default
  labels:
    posture.acme.io/caged: "true"
spec:
  containers:
    - name: app
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: healthy
  namespace: default
spec:
  containers:
    - name: app
      image: nginx
